--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url:  https://viking-runes.github.io
+      url:  'https://viking-runes.github.io'
     runs-on: ubuntu-latest
     needs: build
     steps:
