--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_PROJECT_HOST=https://vikingrunes.io/rune-scaner
+VITE_PROJECT_HOST=https://api.vikingrunes.io/rune-scaner
 
 VITE_ASSETS = https://cdn.vikingrunes.io/assets/images
 
