--- a/.github/workflows/deploy_test.yml
+++ b/.github/workflows/deploy_test.yml
@@ -33,6 +33,8 @@ jobs:
         uses: borales/actions-yarn@v4
         with:
           cmd: build
+          
+      - run: cp dist/index.html dist/404.html      
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
