--- a/.github/workflows/deploy_test.yml
+++ b/.github/workflows/deploy_test.yml
@@ -12,6 +12,8 @@ permissions:
 jobs:
   build:
     name: Build
+    environment:
+      name: github-pages-test
     runs-on: ubuntu-latest
 
     steps:
@@ -24,6 +26,8 @@ jobs:
           node-version: 21.x
           cache: 'npm'
 
+      - run: cp .env_test .env
+
       - name: Run Install
         uses: borales/actions-yarn@v4
         with:
@@ -33,21 +37,18 @@ jobs:
         uses: borales/actions-yarn@v4
         with:
           cmd: build
-          
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
 
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+      - run: cp dist/index.html dist/404.html
+
+      - name: Pushes to another repository
+        id: push_directory
+        uses: cpina/github-action-push-to-another-repository@main
+        env:
+          SSH_DEPLOY_KEY: ${{ secrets.SSH_DEPLOY_KEY }}
         with:
-          path: './dist'
-
-  deploy:
-    environment:
-      name: github-pages
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+          source-directory: dist/
+          destination-github-username: 'viking-runes'
+          destination-repository-name: 'testnet.vikingrunes.io'
+          user-email: viking.astross@gmail.com
+          commit-message: See ORIGIN_COMMIT from $GITHUB_REF
+          target-branch: main
