--- a/.env_test
+++ b/.env_test
@@ -1,4 +1,4 @@
-VITE_PROJECT_HOST=https://testnet.vikingrunes.io/rune-scaner
+VITE_PROJECT_HOST=https://apit.vikingrunes.io/rune-scaner
 
 VITE_ASSETS = https://cdn.vikingrunes.io/assets/images
 
