feat: add stake temp

--- a/.env.testnet
+++ b/.env.testnet
@@ -5,3 +5,7 @@ VITE_ASSETS = https://cdn.vikingrunes.io/assets/images
 VITE_OPEN_DAO_URL=https://testnet.vikingrunes.io/opendao
 
 VITE_NETWORK_TYPE=testnet
+
+VITE_UNISAT_URL=https://wallet-api-testnet.unisat.io/v5
+
+VITE_STAKE_URL=https://06dd-58-45-71-85.ngrok-free.app
