--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "redstone-api": "^0.4.12",
     "sats-connect": "2.2.1",
     "stylelint-config-rational-order": "^0.1.2"
   },
