--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_PROJECT_HOST=https://api.vikingrunes.io/rune-scaner
+VITE_PROJECT_HOST=http://127.0.0.1/go-1221-github
 
 VITE_ASSETS = https://cdn.vikingrunes.io/assets/images
 
