--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-router-dom": "^6.22.3",
     "redstone-api": "^0.4.12",
     "sats-connect": "2.2.1",
-    "stylelint-config-rational-order": "^0.1.2"
+    "stylelint-config-rational-order": "^0.1.2",
+    "tiny-secp256k1": "^2.2.3"
   },
   "devDependencies": {
     "@types/comma-number": "^2.1.2",
