--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "vite": "^5.1.6",
     "vite-plugin-node-polyfills": "^0.21.0",
     "vite-plugin-svgr": "^4.2.0",
+    "vite-plugin-wasm": "^3.3.0",
     "vite-svg-loader": "^5.1.0"
   }
 }
