--- a/.env.testnet
+++ b/.env.testnet
@@ -8,4 +8,4 @@ VITE_NETWORK_TYPE=testnet
 
 VITE_UNISAT_URL=https://wallet-api-testnet.unisat.io/v5
 
-VITE_STAKE_URL=https://2135-58-45-21-154.ngrok-free.app
+VITE_STAKE_URL=https://441c-58-45-41-162.ngrok-free.app
