--- a/.github/workflows/deploy_test.yml
+++ b/.github/workflows/deploy_test.yml
@@ -35,9 +35,9 @@ jobs:
       - run: cp .env.testnet .env
 
       - name: Build project
-        uses: borales/actions-yarn@v4
-        with:
-          cmd: build
+        run: |
+          pnpm install && pnpm build
+
 
       - run: cp dist/index.html dist/404.html
 
