feat: add btc balance

--- a/.env.testnet
+++ b/.env.testnet
@@ -2,7 +2,7 @@ VITE_PROJECT_HOST=https://apit.vikingrunes.io/rune-scaner
 
 VITE_ASSETS=https://cdn.vikingrunes.io/assets/images
 
-VITE_OPEN_DAO_URL=https://testnet.vikingrunes.io/opendao
+VITE_OPEN_DAO_URL=https://apit.vikingrunes.io/opendao
 
 VITE_NETWORK_TYPE=testnet
 
