--- a/.env.testnet
+++ b/.env.testnet
@@ -8,5 +8,5 @@ VITE_NETWORK_TYPE=testnet
 
 VITE_UNISAT_URL=https://wallet-api-testnet.unisat.io/v5
 
-# VITE_STAKE_URL=https://dc6b-58-45-38-114.ngrok-free.app
+# VITE_STAKE_URL=https://68b4-58-45-38-114.ngrok-free.app
 VITE_STAKE_URL=https://apit.vikingrunes.io/stake
