--- a/.env.testnet
+++ b/.env.testnet
@@ -8,5 +8,5 @@ VITE_NETWORK_TYPE=testnet
 
 VITE_UNISAT_URL=https://wallet-api-testnet.unisat.io/v5
 
-VITE_STAKE_URL=https://c481-58-45-21-127.ngrok-free.app
-# VITE_STAKE_URL=https://apit.vikingrunes.io/stake
+# VITE_STAKE_URL=https://c481-58-45-21-127.ngrok-free.app
+VITE_STAKE_URL=https://apit.vikingrunes.io/stake
