feat: add prod env

--- a/.env.production
+++ b/.env.production
@@ -2,9 +2,9 @@ VITE_PROJECT_HOST=https://apit.vikingrunes.io/rune-scaner
 
 VITE_OPEN_DAO_URL=https://apit.vikingrunes.io/opendao
 
-VITE_NETWORK_TYPE=testnet
+VITE_NETWORK_TYPE=mainnet
 
-VITE_UNISAT_URL=https://wallet-api-testnet.unisat.io/v5
+VITE_UNISAT_URL=https://wallet-api.unisat.io/v5
 
 # VITE_STAKE_URL=https://9e55-58-45-20-78.ngrok-free.app
 VITE_STAKE_URL=https://apit.vikingrunes.io/stake
