--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -38,7 +38,7 @@ jobs:
 
       - run: cp dist/index.html dist/404.html
 
-      - run: cp CNAME dist/CNAME
+      - run: cp CNAME_prod dist/CNAME
 
       - name: Pushes to another repository
         id: push_directory
