--- a/.env.production
+++ b/.env.production
@@ -1,10 +1,10 @@
-VITE_PROJECT_HOST=https://stake.vikingrunes.io/rune-scaner
+VITE_PROJECT_HOST=https://api.vikingrunes.io/rune-scaner
 
-VITE_OPEN_DAO_URL=https://stake.vikingrunes.io/opendao
+VITE_OPEN_DAO_URL=https://api.vikingrunes.io/opendao
 
 VITE_NETWORK_TYPE=mainnet
 
 VITE_UNISAT_URL=https://wallet-api.unisat.io/v5
 
 # VITE_STAKE_URL=https://9e55-58-45-20-78.ngrok-free.app
-VITE_STAKE_URL=https://stake.vikingrunes.io/stake
+VITE_STAKE_URL=https://stake.vikingrunes.io
