--- a/.env.production
+++ b/.env.production
@@ -7,4 +7,4 @@ VITE_NETWORK_TYPE=mainnet
 VITE_UNISAT_URL=https://wallet-api.unisat.io/v5
 
 # VITE_STAKE_URL=https://9e55-58-45-20-78.ngrok-free.app
-VITE_STAKE_URL=https://stake.vikingrunes.io
+VITE_STAKE_URL=https://api.vikingrunes.io/stake
